--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@ body {
   
   .jumbotron {
     background-image: url("../images/microbs.png");
-    background-size: auto 100%;
-    height: 100%;
+    background-size: 100% 100%;
+    text-align: center;
+    color:black;
   }
