--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,5 +7,5 @@ body {
     background-image: url("../images/microbs.png");
     background-size: 100% 100%;
     text-align: center;
-    color:black;
+    color:yellow;
   }
